# fastui-blog-template

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt  run.sh
content/: about.md  index.md
content/posts/: test-post2.md
contents/posts/: test-post.md
pages/: about.py  index.py  posts.py  shared.py
