[tool.poetry]
name = "fastui-blog-template"
version = "0.1.0"
description = ""
authors = ["kwon-evan <koun012@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastui = "^0.5.2"
fastapi = "^0.110.0"
python-frontmatter = "^1.1.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
